增加登陆、注册模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,18 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.nowcoder.community=debug
+
+#Spring Mail
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=2019730388@qq.com
+spring.mail.password=lwtnbxlclvuecgje
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtl.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# community
+community.path.domain=http://localhost:8080
+community.path.upload=/Users/xingtao/IdeaProjects/newcoder/J:/javaProject/data/upload
