--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # community
 community.path.domain=http://localhost:8080
 community.path.upload=/Users/xingtao/IdeaProjects/newcoder/J:/javaProject/data/upload
+
+#Redis
+spring.redis.database=0
+spring.redis.host=101.34.230.20
+spring.redis.port=6379
+spring.redis.password=123456
