--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,9 @@ spring.redis.database=0
 spring.redis.host=101.34.230.20
 spring.redis.port=6379
 spring.redis.password=123456
+
+#Kafka
+spring.kafka.bootstrap-servers=101.34.230.20:9092
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
