--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,10 +43,14 @@ community.path.upload=/Users/xingtao/IdeaProjects/newcoder/J:/javaProject/data/u
 spring.redis.database=0
 spring.redis.host=101.34.230.20
 spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.password=
 
 #Kafka
 spring.kafka.bootstrap-servers=101.34.230.20:9092
 spring.kafka.consumer.group-id=test-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
+
+#elasticsearch
+spring.data.elasticsearch.cluster-name=community
+spring.data.elasticsearch.cluster-nodes=101.34.230.20:9300
