利用quartz定期更新帖子分数，增加热帖排行功能，同时利用caffeine对热帖列表进行本地缓存

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,39 @@ spring.kafka.consumer.auto-commit-interval=3000
 #elasticsearch
 spring.data.elasticsearch.cluster-name=community
 spring.data.elasticsearch.cluster-nodes=101.34.230.20:9300
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk (wkhtmltopdf)
+wk.image.command=/usr/local/bin/wkhtmltoimage
+wk.image.storage=/Users/xingtao/IdeaProjects/newcoder/J:/javaProject/data/wk-images
+
+# qiniu
+qiniu.key.access=SVjM6VmPVMhnycnOB3QyjLPlb-77_51UO3dtYmae
+qiniu.key.secret=pvmW0RjyGJpk7GRXePkzvEJHxk1W9zxz5nNf0hK0
+qiniu.bucket.header.name=communitytxheader
+quniu.bucket.header.url=http://r3fazhu1m.hd-bkt.clouddn.com
+qiniu.bucket.share.name=communitytxshare
+qiniu.bucket.share.url=http://r3faok7fa.hd-bkt.clouddn.com
+
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+
+
