增加springboot actuator对项目进行监控

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,4 +89,9 @@ qiniu.bucket.share.url=http://r3faok7fa.hd-bkt.clouddn.com
 caffeine.posts.max-size=15
 caffeine.posts.expire-seconds=180
 
+# actuator
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=info,caches
+management.health.elasticsearch.enabled=false
+
 
